Revert "will delete"
This reverts commit 06aff792fcca463fd5c0e69209553cb504f22d72.

--- a/ContactTracing15/Pages/Index.cshtml
+++ b/ContactTracing15/Pages/Index.cshtml
@@ -5,28 +5,7 @@
 }
 
 
-<div class="row mb-auto">
-    <div class="col-md-4">
-        <div class="row no-gutters border mb-4">
-            <div class="col p-4 mb-4 ">
-                <p class="card-text">
-                    This is a database application aiming to make
-                    the efforts of tracking and tracing covid19
-                    cases easier for healthcare agents.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="row no-gutters border mb-4">
-            <div class="col p-4 d-flex flex-column">
-                <p class="card-text mb-auto">
-                    You can find the source code at GitHub.
-                </p>
-                <p>
-                    <a href="https://github.com/CosmicRay11/ContactTracing15" class="stretched-link">See project source code</a>
-                </p>
-            </div>
-        </div>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
