Currently there is a database error Im trying to fix; posting to maybe have someone contribute

--- a/ContactTracing15/Pages/Shared/_Layout.cshtml
+++ b/ContactTracing15/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="Cases/Index">Cases</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="Contacts/Contacts">Home</a>
+                        </li>
                     </ul>
                 </div>
             </div>
