--- a/ContactTracing15/Pages/Shared/_Layout.cshtml
+++ b/ContactTracing15/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="Cases/Index">Cases</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Contacts/Contacts">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="Contacts/Index">Contacts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="Testers/Index">Testers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="Tracers/Index">Tracers</a>
                         </li>
                     </ul>
                 </div>
