Created forms that add cases and contacts to database. Created the very first step in creating the Pages used by tracers.

--- a/ContactTracing15/Pages/Shared/_Layout.cshtml
+++ b/ContactTracing15/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Testing/PositiveForm">Tester</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Tracing/ContactForm">Tracer</a>
+                        </li>
                     </ul>
                 </div>
             </div>
