--- a/ContactTracing15/Pages/Shared/_Layout.cshtml
+++ b/ContactTracing15/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Testing/PositiveForm">Testing form</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Tracing/ContactForm">Tracing form</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Tracing/Dashboard">Tracing dashboard</a>
+                        </li>
 
                     </ul>
                 </div>
