--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -1,4 +1,23 @@
 ﻿@page
 @model ContactTracing15.Pages.Tracing.DashboardModel
-@{
-}
+
+<div class="lhs" style="float:left;width:50%">
+    @await Html.PartialAsync("_AssignedCases", Model.CaseListItems)
+</div>
+<div class="rhs">
+    @if (Model.HasCurrentAssignedCase)
+    {
+        <p>
+            Case Name: @Html.DisplayFor(m => m.CurrentAssignedCase.Name)
+        </p>
+        <p>
+            <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID">See edit page </a>
+        </p>
+    }
+    else
+    {
+        <p>
+            Some stuff on the right.
+        </p>
+    }
+</div>
