--- a/ContactTracing15/Pages/Shared/_LoginPartial.cshtml
+++ b/ContactTracing15/Pages/Shared/_LoginPartial.cshtml
@@ -1,26 +1,23 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+    @if (User.Identity.IsAuthenticated)
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark"> Hello, @User.Identity.Name, User Type: @User.Claims.First(c => c.Type == "usrtype").Value </a>
+        </li>
+        <li class="nav-item">
+            <a onclick="document.getElementById('logout_form').submit();" style="cursor: pointer;" class="nav-link btn btn-link text-dark">
+                Sign out
+            </a>
+
+        </li>
+        <form asp-controller="Account" asp-action="SignOut" method="post" id="logout_form"></form>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Account" asp-action="SignIn">Sign in</a>
+        </li>
+    }
 </ul>
