--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -10,14 +10,23 @@
         <p>
             Case Name: @Html.DisplayFor(m => m.CurrentAssignedCase.Name)
         </p>
+        <p> Added Contacts: </p>
+        <u1>
+            @foreach (var contact in Model.CurrentAssignedCase.contacts)
+            {
+                <li>
+                    @contact.Forename
+                </li>
+            }
+        </u1>
         <p>
-            <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID">See edit page </a>
+            <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID">Add a Contact </a>
         </p>
     }
     else
     {
         <p>
-            Some stuff on the right.
+            Click a case for details.
         </p>
     }
 </div>
