Privacy statement added

--- a/ContactTracing15/Pages/Privacy.cshtml
+++ b/ContactTracing15/Pages/Privacy.cshtml
@@ -1,8 +1,62 @@
-﻿@page
+﻿@page 
 @model PrivacyModel
-@{
-    ViewData["Title"] = "Privacy Policy";
-}
+@{ ViewData["Title"] = "Privacy Policy"; }
 <h1>@ViewData["Title"]</h1>
+<h2><strong>Introduction</strong></h2>
+<p>Contact tracing is an important part of the government's strategy for managing the spread of COVID-19 in the UK. This is what gov.uk has to say about the need for contact tracing:</p>
+<p>"COVID-19 is an infectious disease affecting the whole of the country. The virus that causes COVID-19 is a coronavirus. Infectious diseases present a serious and ongoing threat to public health. If not controlled, they can infect large numbers of people and, depending on the disease and other factors, can result in ill-effects ranging from relatively minor symptoms to early death.</p>
+<p>Contact tracing is an important way of controlling the spread of infectious diseases. It involves identifying and tracing all the people who have been in contact with a person who has been infected. Depending on the nature and duration of the contact, these contacts may require advice or treatment to prevent the disease from spreading further."</p>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2><strong>The type of personal information we collect </strong></h2>
+<p>We currently collect and process the following information on people who test positive for COVID-19 through the NHS Testing Service:</p>
+<ul>
+    <li>Name</li>
+    <li>Main telephone number</li>
+    <li>Email address</li>
+    <li>Truncated postcode</li>
+    <li>The date you were tested</li>
+    <li>The date you first developed symptoms</li>
+</ul>
+<p>We currently collect and process the following information on people who are listed as contacts of a positive COVID-19 case:</p>
+<ul>
+    <li>Name</li>
+    <li>Main telephone number</li>
+    <li>Email address</li>
+</ul>
+
+<h2><strong>How we get the personal information and why we have it</strong></h2>
+<p>Personal information we process is provided to us either:</p>
+<ul>
+    <li>Directly by NHS test centres for the purpose of contacting you to identify your recent close contacts.</li>
+    <li>From people who have tested positive for COVID-19 and believe that you are one of their recent close contacts.</li>
+</ul>
+<p>We use this information in order to identify and engage with the close contacts of people who have tested positive for Covid-19. Aggregate and anonymous information is also processed for the purpose of understanding the spread of COVID-19 in the community.</p>
+<p>We may share anonymised and aggregate information with government-affiliated data analysis companies.</p>
+<p>Under the General Data Protection Regulation (GDPR), the lawful bases we rely on for processing this information are:</p>
+<p><strong>(a) Your consent</strong><strong>. You are able to remove your consent at any time. You can do this by contacting [contact details]</strong></p>
+<p><strong>(b) We need it to perform a public task.</strong></p>
+
+<h2><strong>How we store your personal information </strong></h2>
+<p>Your information is securely stored in an online cloud storage facility.</p>
+<p>We keep personal data identifying information for 14 days. We will then dispose your information by deleting your name and contact details from our databases, leaving only an anonymised case in our records.</p>
+
+<h2><strong>Your data protection rights</strong></h2>
+<p>Under data protection law, you have rights including:</p>
+<p><strong>Your right to be informed </strong>&ndash; You have the right to be informed about the collection and use of your personal data. This is outlined above.</p>
+<p><strong>Your right of access</strong> - You have the right to ask us for copies of your personal information.</p>
+<p><strong>Your right to rectification</strong> - You have the right to ask us to rectify personal information you think is inaccurate. You also have the right to ask us to complete information you think is incomplete.</p>
+<p>You are not required to pay any charge for exercising your rights. If you make a request, we have one month to respond to you.</p>
+<p>Please contact us at [insert email address, phone number and or postal address] if you wish to make a request.</p>
+
+<h2><strong>How to complain</strong></h2>
+<p>If you have any concerns about our use of your personal information, you can make a complaint to us at [Insert your organisation&rsquo;s contact details for data protection queries].</p>
+<p>You can also complain to the ICO if you are unhappy with how we have used your data.</p>
+<p>The ICO&rsquo;s address:</p>
+<p>Information Commissioner&rsquo;s Office</p>
+<p>Wycliffe House</p>
+<p>Water Lane</p>
+<p>Wilmslow</p>
+<p>Cheshire</p>
+<p>SK9 5AF</p>
+<p>Helpline number: 0303 123 1113</p>
+<p>ICO website: <a href="https://www.ico.org.uk">https://www.ico.org.uk</a></p>
