--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -8,19 +8,40 @@
     @if (Model.HasCurrentAssignedCase)
     {
         <p>
-            Case Name: @Html.DisplayFor(m => m.CurrentAssignedCase.Name)
+            Name: @Html.DisplayFor(m => m.CurrentAssignedCase.Name)
         </p>
+        <p>
+            Phone Number: @Html.DisplayFor(m => m.CurrentAssignedCase.PhoneNumber)
+        </p>
+        @if (Model.CurrentAssignedCase.EmailAddress != null)
+        {
+            <p>
+                Email Address: @Html.DisplayFor(m => m.CurrentAssignedCase.EmailAddress)
+            </p>
+        }
+        @if (Model.CurrentAssignedCase.PhoneNumber2 != null)
+        {
+            <p>
+                Secondar Phone Number: @Html.DisplayFor(m => m.CurrentAssignedCase.PhoneNumber2)
+            </p>
+        }
         <p> Added Contacts: </p>
         <u1>
             @foreach (var contact in Model.CurrentAssignedCase.contacts)
             {
                 <li>
-                    @contact.Forename
+                    @contact.Name
+                    :
+                    @contact.EmailAddress
+                    ,
+                    @contact.PhoneNumber
                 </li>
             }
         </u1>
         <p>
             <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID">Add a Contact </a>
+            <a asp-page="./Dashboard" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID">| Submit Case </a>
+            <a asp-page="./Dashboard" asp-route-dropcaseid="@Model.CurrentAssignedCase.CaseID">| Drop Case</a>
         </p>
     }
     else
@@ -31,4 +52,4 @@
     }
 </div>
 
-@{ }}
+@{ }
