Fixed api issues with the heatmap

--- a/ContactTracing15/Pages/GovAgent/GovHome.cshtml
+++ b/ContactTracing15/Pages/GovAgent/GovHome.cshtml
@@ -40,8 +40,8 @@
     Map canvas goes here
 </div>
 
+<script  src="@Model.googleUrl"></script>
 
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAtclzZCimV0CJog5ReUNG3rsL3fXL-o_8&libraries=visualization"></script>
 <script>
     // Adding 500 Data Points
     var map, pointarray, heatmap;
