--- a/ContactTracing15/Pages/Privacy.cshtml
+++ b/ContactTracing15/Pages/Privacy.cshtml
@@ -49,7 +49,7 @@
 <p>Please contact us at [insert email address, phone number and or postal address] if you wish to make a request.</p>
 
 <h2><strong>How to complain</strong></h2>
-<p>If you have any concerns about our use of your personal information, you can make a complaint to us at [Insert your organisation&rsquo;s contact details for data protection queries].</p>
+<p>If you have any concerns about our use of your personal information, you can make a complaint to us at [our contact details for data protection queries].</p>
 <p>You can also complain to the ICO if you are unhappy with how we have used your data.</p>
 <p>The ICO&rsquo;s address:</p>
 <p>Information Commissioner&rsquo;s Office</p>
