--- a/ContactTracing15/Pages/Shared/_Layout.cshtml
+++ b/ContactTracing15/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Testing/Dashboard">Testing dashboard</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tracing/Dashboard">Tracing dashboard</a>
                         </li>
                         <li class="nav-item">
