--- a/ContactTracing15/Pages/Testing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Testing/Dashboard.cshtml
@@ -3,6 +3,10 @@
 @{
 }
 <p> Hello, @Model.Details.Username</p>
+@if(Model.Details.lastCaseName != null)
+            {
+                <p>Successfully added @Model.Details.lastCaseName</p>
+            }
 <p>
     <a asp-page="./PositiveForm"> Add Positive Test Result</a>
 </p>
