--- a/ContactTracing15/Pages/Testing/PositiveForm.cshtml
+++ b/ContactTracing15/Pages/Testing/PositiveForm.cshtml
@@ -5,6 +5,8 @@
 }
 
 <form method="post">
+    <input asp-for="CaseForm.TesterId" />
+    <input asp-for="CaseForm.TestingCentrePostcode" />
     <div class="row">
         <div class="col-9">
             <ul class="PositiveFormList" data-role="listview">
