the table of cases looks like a table now; if you finish the cases it tells you that you have no more cases right now

--- a/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
@@ -48,7 +48,7 @@
 </form>
     </p>
 <p>
-    <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-outline-secondary rounded-0" role="button">Back to details </a>
+          <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-sm btn-outline-secondary rounded-0" role="button">Back to details </a>
 </p>
 </div>
 
