minor update - call zoom scaling function on heatmap at start, not just on update

--- a/ContactTracing15/Pages/GovAgent/GovHome.cshtml
+++ b/ContactTracing15/Pages/GovAgent/GovHome.cshtml
@@ -94,6 +94,7 @@
         }, 3000);
 
         google.maps.event.addListener(map, 'zoom_changed', autoSetRadius);
+        autoSetRadius();
     }
 
     function autoSetRadius() {
