Added frontend stuff to display stats, including passing values into the page from services and creating a table

--- a/ContactTracing15/Pages/GovAgent/GovHome.cshtml
+++ b/ContactTracing15/Pages/GovAgent/GovHome.cshtml
@@ -4,7 +4,72 @@
     ViewData["Title"] = "Government Agent Dashboard";
 }
 
+<style>
+
+    #tracingCentreTable {
+        height: 50%;
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+
+
+</style>
 
 
 
 <a class="btn btn-outline-secondary" asp-area="" asp-page="/GovAgent/HeatmapPage">View Heatmap</a>
+
+<p>Average trace time last 28 days: @Model.AverageTraceTimeLast28DaysString</p>
+<p>Average contacts per case last 28 days: @Model.AverageContactsPerCaseLast28Days</p>
+<p>Percentage of cases reached in the last 28 days: @Model.PercentageCasesReachedLast28Days %</p>
+<p>Total positive tests recorded: @Model.TotalCasesEver</p>
+<p>Total cases reached ever: @Model.TotalCasesReached</p>
+<p>Total contacts reached ever: @Model.TotalContactsReached</p>
+
+
+@if (Model.AllTracingCentreStats.Count() > 0)
+{
+    <table class="table table-hover table-sm" id="tracingCentreTable">
+        <thead style="background: #90ADB8">
+            <tr>
+                <th scope="col" style="text-align: center; font-size: 18px">Tracing Centre</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Cases Reached</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Cases Assigned</th>
+                <th scope="col" style="text-align: center; font-size: 18px">% Cases Reached</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Average Trace Time (day:hour)</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var centreStats in Model.AllTracingCentreStats.OrderByDescending(x => x.Name))
+            {
+            <tr>
+                <td>
+                    <a class="btn btn-block btn-sm" style="background-color:transparent">@Html.DisplayFor(m => centreStats.Name)</a>
+                </td>
+                <td><a class="btn btn-block btn-sm" style="background-color:transparent">@Html.DisplayFor(m => centreStats.CasesReachedLast28Days)</a></td>
+                <td><a class="btn btn-block btn-sm" style="background-color:transparent">@Html.DisplayFor(m => centreStats.CasesAssignedLast28Days)</a></td>
+                <td><a class="btn btn-block btn-sm" style="background-color:transparent">@Html.DisplayFor(m => centreStats.PercentageCasesReachedLast28Days)</a></td>
+                <td><a class="btn btn-block btn-sm" style="background-color:transparent">@Html.DisplayFor(m => centreStats.AverageTraceTimeLast28Days.Days) : @Html.DisplayFor(m => centreStats.AverageTraceTimeLast28Days.Hours)</a></td>
+            </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <table class="table table-sm">
+        <thead style="background: #90ADB8">
+            <tr>
+                <th scope="col" style="text-align: center; font-size: 18px">Tracing Centres</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    There are no registered tracing centres to view.
+                </td>
+            </tr>
+        </tbody>
+    </table>
+}  
