Added heading to table in case when no data is added (quick fix)

--- a/ContactTracing15/Pages/GovAgent/GovHome.cshtml
+++ b/ContactTracing15/Pages/GovAgent/GovHome.cshtml
@@ -61,7 +61,11 @@ else
     <table class="table table-sm">
         <thead style="background: #90ADB8">
             <tr>
-                <th scope="col" style="text-align: center; font-size: 18px">Tracing Centres</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Tracing Centre</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Cases Reached</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Cases Assigned</th>
+                <th scope="col" style="text-align: center; font-size: 18px">% Cases Reached</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Average Trace Time (day:hour)</th>
             </tr>
         </thead>
         <tbody>
