--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -31,17 +31,19 @@
                 <u1>
                     @foreach (var contact in Model.CurrentAssignedCase.contacts)
                     {
-                    <li>
-                        @contact.Info
-                        <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-editcontactid="@contact.ContactId">edit </a>
-                        <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-deletecontactid="@contact.ContactId" >delete</a>
-                    </li>
+                        <li>
+                            @contact.Name
+                            :
+                            @contact.EmailAddress
+                            ,
+                            @contact.PhoneNumber
+                        </li>
                     }
                 </u1>
             </p>
             <p>
                 <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button">Add a Contact </a>
-                <a asp-page="./Dashboard" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Close Case </a>
+                <a asp-page="./Dashboard" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Submit Case </a>
                 <a asp-page="./Dashboard" asp-route-dropcaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Drop Case</a>
             </p>
         </div>
