--- a/ContactTracing15/Pages/GovAgent/HeatmapPage.cshtml
+++ b/ContactTracing15/Pages/GovAgent/HeatmapPage.cshtml
@@ -16,11 +16,7 @@
     }
 </style>
 
-<a class="btn btn-outline-secondary" id="return-button" asp-area="" asp-page="/GovAgent/GovHome">Return to dashboard</a>
-
-<h1>Heatmap</h1>
-
-
+<a class="btn btn-outline-primary" id = "return-button" asp-area="" asp-page="/GovAgent/GovHome">Return to dashboard</a>
 
 <form asp-page-handler="DateButton" method="post">
     <div class="input-group mb-3">
