revert bad changes

--- a/ContactTracing15/Pages/Privacy.cshtml
+++ b/ContactTracing15/Pages/Privacy.cshtml
@@ -2,7 +2,6 @@
 @model PrivacyModel
 @{ ViewData["Title"] = "Privacy Policy"; }
 <h1>@ViewData["Title"]</h1>
-<p>  </p>
 <h2><strong>Introduction</strong></h2>
 <p>Contact tracing is an important part of the government's strategy for managing the spread of COVID-19 in the UK. This is what gov.uk has to say about the need for contact tracing:</p>
 <p>"COVID-19 is an infectious disease affecting the whole of the country. The virus that causes COVID-19 is a coronavirus. Infectious diseases present a serious and ongoing threat to public health. If not controlled, they can infect large numbers of people and, depending on the disease and other factors, can result in ill-effects ranging from relatively minor symptoms to early death.</p>
@@ -50,7 +49,7 @@
 <p>Please contact us at [insert email address, phone number and or postal address] if you wish to make a request.</p>
 
 <h2><strong>How to complain</strong></h2>
-<p>If you have any concerns about our use of your personal information, you can make a complaint to us at [our contact details for data protection queries].</p>
+<p>If you have any concerns about our use of your personal information, you can make a complaint to us at [Insert your organisation&rsquo;s contact details for data protection queries].</p>
 <p>You can also complain to the ICO if you are unhappy with how we have used your data.</p>
 <p>The ICO&rsquo;s address:</p>
 <p>Information Commissioner&rsquo;s Office</p>
