--- a/ContactTracing15/Pages/_ViewImports.cshtml
+++ b/ContactTracing15/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
 @using ContactTracing15
+@using ContactTracing15.Data
 @namespace ContactTracing15.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
