--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -1,60 +1,55 @@
 ﻿@page
 @model ContactTracing15.Pages.Tracing.DashboardModel
 
-<div class="lhs" style="background: #F2F2F2; border: 1px solid #cecece; float: left; width: 30%">
+<div class="lhs" style="float:left;width:50%">
     @await Html.PartialAsync("_AssignedCases", Model.CaseListItems)
 </div>
 <div class="rhs">
     @if (Model.HasCurrentAssignedCase)
     {
-        <div class="container" style="background: #F2F2F2; border: 1px solid #cecece; float: right; width: 60%">
-            <h2>
-                @Html.DisplayFor(m => m.CurrentAssignedCase.Name)
-            </h2>
+        <p>
+            Name: @Html.DisplayFor(m => m.CurrentAssignedCase.Name)
+        </p>
+        <p>
+            Phone Number: @Html.DisplayFor(m => m.CurrentAssignedCase.PhoneNumber)
+        </p>
+        @if (Model.CurrentAssignedCase.EmailAddress != null)
+        {
             <p>
-                Phone Number: @Html.DisplayFor(m => m.CurrentAssignedCase.PhoneNumber)
+                Email Address: @Html.DisplayFor(m => m.CurrentAssignedCase.EmailAddress)
             </p>
-            @if (Model.CurrentAssignedCase.EmailAddress != null)
+        }
+        @if (Model.CurrentAssignedCase.PhoneNumber2 != null)
+        {
+            <p>
+                Secondar Phone Number: @Html.DisplayFor(m => m.CurrentAssignedCase.PhoneNumber2)
+            </p>
+        }
+        <p> Added Contacts: </p>
+        <u1>
+            @foreach (var contact in Model.CurrentAssignedCase.contacts)
             {
-                <p>
-                    Email Address: @Html.DisplayFor(m => m.CurrentAssignedCase.EmailAddress)
-                </p>
+                <li>
+                    @contact.Name
+                    :
+                    @contact.EmailAddress
+                    ,
+                    @contact.PhoneNumber
+                </li>
             }
-            @if (Model.CurrentAssignedCase.PhoneNumber2 != null)
-            {
-                <p>
-                    Secondary Phone Number: @Html.DisplayFor(m => m.CurrentAssignedCase.PhoneNumber2)
-                </p>
-            }
-            <p>
-                Added Contacts:
-                <u1>
-                    @foreach (var contact in Model.CurrentAssignedCase.contacts)
-                    {
-                        <li>
-                            @contact.Name
-                            :
-                            @contact.EmailAddress
-                            ,
-                            @contact.PhoneNumber
-                        </li>
-                    }
-                </u1>
-            </p>
-            <p>
-                <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button">Add a Contact </a>
-                <a asp-page="./Dashboard" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Submit Case </a>
-                <a asp-page="./Dashboard" asp-route-dropcaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Drop Case</a>
-            </p>
-        </div>
+        </u1>
+        <p>
+            <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID">Add a Contact </a>
+            <a asp-page="./Dashboard" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID">| Submit Case </a>
+            <a asp-page="./Dashboard" asp-route-dropcaseid="@Model.CurrentAssignedCase.CaseID">| Drop Case</a>
+        </p>
     }
     else
     {
-        <div class="container" style="float: right; width: 60%">
-            <p>
-                Click a case for details.
-            </p>
-        </div>
+        <p>
+            Click a case for details.
+        </p>
     }
+</div>
 
-       
+@{ }
